made buttons variant contained and fixed some more alignments

--- a/frontend/src/components/post/post.css
+++ b/frontend/src/components/post/post.css
@@ -166,6 +166,7 @@
   flex-direction: column;
   width: 100%;
   align-items: flex-end;
+  row-gap: 1.5em;
 }
 
 .showCommentArea {
